--- a/PerformanceRatingSystem.WebMVC/appsettings.json
+++ b/PerformanceRatingSystem.WebMVC/appsettings.json
@@ -2,7 +2,8 @@
 
   "ConnectionStrings": {
 
-    "DefaultConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
+    "MyConnection": "Server=D1AMOND; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
 
   },
  
