--- a/PerformanceRatingSystem.WebMVC/appsettings.json
+++ b/PerformanceRatingSystem.WebMVC/appsettings.json
@@ -1,11 +1,11 @@
 {
 
-    "ConnectionStrings": {
+  "ConnectionStrings": {
 
-        "DefaulConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
-        "DefaultConnection": "Server=D1AMOND; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
+    "DefaulConnection": "Server=D1AMOND; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
 
-    },
+  },
  
   "Logging": {
  
