Исправление appsettings.json

--- a/Presentation/PerformanceRatingSystem.Web/appsettings.json
+++ b/Presentation/PerformanceRatingSystem.Web/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
 
-  "ConnectionStrings": {
-    "DbConnection": "Server=D1AMOND; Database=EmployeePerformance; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DbConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true"
+    },
 
   "AllowedHosts": "*"
 }
