Исправление пагинации и доступа к функционалу

--- a/PerformanceRatingSystem.WebMVC/appsettings.json
+++ b/PerformanceRatingSystem.WebMVC/appsettings.json
@@ -1,26 +1,15 @@
 {
-
   "ConnectionStrings": {
-
-    "DefaultConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
-    "DefaulConnection": "Server=D1AMOND; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;"
-
+    "DefaulConnection": "Server=mayonezz_; Database=EmployeePerformanceDb; Integrated Security=true; Trusted_Connection=True; TrustServerCertificate=True;",
+    "DefaultConnection": "Server=localhost,1433; Database=EmployeePerformanceDb; User Id=SA;Password=YourStrong!Passw0rd; TrustServerCertificate=True;"
   },
- 
   "Logging": {
- 
     "LogLevel": {
- 
       "Default": "Information",
- 
       "Microsoft.AspNetCore": "Warning"
- 
     }
- 
   },
- 
   "AllowedHosts": "*"
- 
 }
  
  
